
2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}abi.h: Rename osmdisk.h to asmabi.h.
	* include/linux/Makefile: Reference asmabi.h.
	* kernel/oracleasm.c: Reference asmabi.h.
	* kernel/Makefile: Reference asmabi.h.
	* libosm/asmlib.c: Reference asmabi.h.
	* libosm/Makefile: Reference asmabi.h.
	* test/asmbad.c: Reference asmabi.h.
	* test/sizes.c: Reference asmabi.h.
	* test/Makefile: Reference asmabi.h.
	* tools/Makefile: Drop useless reference to osmabi.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}disk.h: Rename osmdisk.h to asmdisk.h.
	* include/linux/Makefile: Reference asmdisk.h.
	* kernel/oracleasm.c: Reference asmdisk.h.
	* kernel/Makefile: Reference asmdisk.h.
	* libosm/asmlib.c: Drop useless reference to osmdisk.h.
	* libosm/Makefile: Drop reference to osmdisk.h.
	* test/asmbad.c: Reference asmdisk.h.
	* tools/Makefile: Reference asmdisk.h.
	* tools/asmtool.c: Reference asmdisk.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}compat32.h: Rename osmcompat32.h to
		asmcompat32.h.
	* include/linux/Makefile: Reference asmcompat32.h.
	* kernel/oracleasm.c: Reference asmcompat32.h.
	* kernel/Makefile: Reference asmcompat32.h.
	* libosm/asmlib.c: Reference asmcompat32.h.
	* libosm/Makefile: Reference asmcompat32.h.
	* test/asmbad.c: Reference asmcompat32.h.
	* test/sizes.c: Reference asmcompat32.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}kernel.h: Rename osmkernel.h to
		asmkernel.h.
	* include/linux/Makefile: Reference asmkernel.h.
	* kernel/oracleasm.c: Reference asmkernel.h.
	* kernel/Makefile: Reference asmkernel.h.
	* libosm/Makefile: Reference asmerror.h. (Double oops)

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/Makefile: Reference asmerror.h. (oops)

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* documents/asm-install.txt: Added.

2003-11-12	Joel Becker <joel.becker@oracle.com>
