@@ -32,16 +32,16 @@ DIST_FILES = \
 
 
 rhas_srpm: dist
-	rpm -bs --define "_sourcedir $(TOPDIR)" --define "_srcrpmdir $(TOPDIR)" "$(TOPDIR)/redhat/osm-2.4.9-e.spec"
+	rpm -bs --define "_sourcedir $(TOPDIR)" --define "_srcrpmdir $(TOPDIR)" "$(TOPDIR)/redhat/oracleasm-2.4.9-e.spec"
 
 rhas_rpm: rhas_srpm
-	rpm --rebuild --target i686 "osm-2.4.9-e-$(DIST_VERSION)-$(RPM_VERSION).src.rpm"
+	rpm --rebuild --target i686 "oracleasm-2.4.9-e-$(DIST_VERSION)-$(RPM_VERSION).src.rpm"
 
 rhel3_srpm: dist
-	rpmbuild -bs --define "_sourcedir $(TOPDIR)" --define "_srcrpmdir $(TOPDIR)" "$(TOPDIR)/redhat/osm-2.4.21-EL.spec"
+	rpmbuild -bs --define "_sourcedir $(TOPDIR)" --define "_srcrpmdir $(TOPDIR)" "$(TOPDIR)/redhat/oracleasm-2.4.21-EL.spec"
 
 rhel3_rpm: rhel3_srpm
-	rpmbuild --rebuild --target i686 "osm-2.4.21-EL-$(DIST_VERSION)-$(RPM_VERSION).src.rpm"
+	rpmbuild --rebuild --target i686 "oracleasm-2.4.21-EL-$(DIST_VERSION)-$(RPM_VERSION).src.rpm"
 
 
 #
