@@ -2,6 +2,9 @@ TOPDIR = ..
 
 include $(TOPDIR)/Preamble.make
 
-DIST_FILES = osm-2.4.9-e.spec.in osm-2.4.21-EL.spec.in osm.init
+DIST_FILES =				\
+	oracleasm-2.4.9-e.spec.in	\
+	oracleasm-2.4.21-EL.spec.in	\
+	oracleasm.init
 
 include $(TOPDIR)/Postamble.make
